Remove personal notes from user test and update model and services on ui with openapi generation
