# psk-full-stack/src/main/java/com/hburak_dev/psk_full_stack/controller/PublicTestSubmissionRequest.java
@@ -18,5 +18,4 @@ public class PublicTestSubmissionRequest {
     @Valid
     private List<SubmitAnswerRequest> answers;
     
-    private String personalNotes;
 }
