# psk-full-stack/src/main/java/com/hburak_dev/psk_full_stack/useranswer/SubmitTestRequest.java
@@ -21,5 +21,4 @@ public class SubmitTestRequest {
     @Valid
     private List<SubmitAnswerRequest> answers;
 
-    private String personalNotes;
 }
