# psk-full-stack/src/main/java/com/hburak_dev/psk_full_stack/useranswer/SubmitTestResponse.java
@@ -16,5 +16,4 @@ public class SubmitTestResponse {
     private Boolean isCompleted;
     private LocalDateTime completedAt;
     private List<UserAnswerResponse> submittedAnswers;
-    private String personalNotes;
 }
