# psk-ui/src/app/services/models/assign-test-request.ts
@@ -3,7 +3,6 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface AssignTestRequest {
-  personalNotes?: string;
   testTemplateId: number;
   userId: number;
 }
